--- a/wiz_demo/PartA.html
+++ b/wiz_demo/PartA.html
@@ -62,8 +62,8 @@
                                 </div>
                                 <div class="field-body">
                                     <div class="field-content">
-                                        <p class="instructions">Please enter paragraphs or select one example below:</p>
-                                        <textarea class="textarea is-small" placeholder="enter text"
+                                        <p class="instructions">I would like to find chackable claims from:</p>
+                                        <textarea class="textarea is-small" placeholder="Please enter paragraphs or select one example below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
@@ -170,9 +170,9 @@
                                 </div>
                                 <div class="field-body">
                                     <div class="field-content">
-                                        <p class="instructions">Please paste one tweet URL or select one example below:
+                                        <p class="instructions">I would like to detect if the following tweet is checkworthy:
                                         </p>
-                                        <textarea class="textarea is-small" placeholder="enter tweet URL"
+                                        <textarea class="textarea is-small" placeholder="Please paste one tweet URL or select one example below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
@@ -270,10 +270,10 @@
                                 </div>
                                 <div class="field-body">
                                     <div class="field-content">
-                                        <p class="instructions">Please paste one article URL or select one example
-                                            below:
+                                        <p class="instructions">I would like to generate summary briefs from:
                                         </p>
-                                        <textarea class="textarea is-small" placeholder="enter article URL"
+                                        <textarea class="textarea is-small" placeholder="Please paste one article URL or select one example
+                                            below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
@@ -365,9 +365,9 @@
                                 </div>
                                 <div class="field-body">
                                     <div class="field-content">
-                                        <p class="instructions">Please enter one claim or select one example below:
+                                        <p class="instructions">I want the machine to search articles to check claims:
                                         </p>
-                                        <textarea class="textarea is-small" placeholder="enter one claim"
+                                        <textarea class="textarea is-small" placeholder="Please enter one claim or select one example below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
