--- a/wiz_demo/PartB.html
+++ b/wiz_demo/PartB.html
@@ -62,9 +62,9 @@
                                 </div>
                                 <div class="field-body">
                                     <div class="field-content">
-                                        <p class="instructions">Please enter one paragraph or select one examples below:
+                                        <p class="instructions">I want to create stand-alone claims from:
                                         </p>
-                                        <textarea class="textarea is-small" placeholder="enter text"
+                                        <textarea class="textarea is-small" placeholder="Please enter one paragraph or select one examples below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
@@ -165,8 +165,8 @@
                                 </div>
                                 <div class="field-body">
                                     <div class="field-content">
-                                        <p class="instructions">Please enter paragraphs or select one example below:</p>
-                                        <textarea class="textarea is-small" placeholder="enter text"
+                                        <p class="instructions">I want to investigate ambiguous terms from:</p>
+                                        <textarea class="textarea is-small" placeholder="Please enter paragraphs or select one example below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
@@ -260,9 +260,8 @@
                                 </div>
                                 <div class="field-body">
                                     <div class="field-content">
-                                        <p class="instructions">Please enter a sentence that contains analytical
-                                            keywords such as space and time, or select one example below:</p>
-                                        <textarea class="textarea is-small" placeholder="enter text"
+                                        <p class="instructions">I want to find quantitative information with search input:</p>
+                                        <textarea class="textarea is-small" placeholder="Please enter a sentence that contains analytical keywords such as space and time, or select one example below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
                                         <a class="example">
@@ -353,8 +352,8 @@
                                 </div>
                                 <div class="field-body">
                                     <div class="field-content">
-                                        <p class="instructions">Please enter one paragraph or select one from the fact-check below:</p>
-                                        <textarea class="textarea is-small" placeholder="enter text"
+                                        <p class="instructions">I want to understand the argumentation quality for this fact-check:</p>
+                                        <textarea class="textarea is-small" placeholder="Please enter one paragraph or select one from the fact-check below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Example:</p>
                                         <p class="example" style="color: black;">Claim: The push for high-speed internet for rural areas, from the start, “was a Democratic thing.”</p>
