--- a/wiz_demo/PartA.html
+++ b/wiz_demo/PartA.html
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="field-body">
                                     <div class="field-content">
-                                        <p class="instructions">I would like to find chackable claims from:</p>
+                                        <p class="instructions">I would like to find checkable claims from:</p>
                                         <textarea class="textarea is-small" placeholder="Please enter paragraphs or select one example below"
                                             name="client's input"></textarea>
                                         <p class="instructions">Examples:</p>
