--- a/wiz_demo/PartB.html
+++ b/wiz_demo/PartB.html
@@ -47,8 +47,6 @@
                     <p><b>Description: </b>this idea aims to create a stand-alone claim by replacing
                         pronouns, removing discourse markers, and adding local conditions to decontextualize it from the
                         paragraph.</p>
-                    <p><b>Objective:</b> this idea aims to understand how useful to have stand-alone claim prepared
-                        before checking claims.</p>
                     <div class="image"><img src="image/Prepare stand-alone claims before fact-checking.svg" alt="">
                     </div>
                 </div>
@@ -110,7 +108,6 @@
                                             <button class="button analyze" type="submit">
                                                 Analyze
                                             </button>
-                                            <p class="help">Please click refresh if there is no output</p>
                                         </div>
                                     </div>
                                 </div>
@@ -132,6 +129,7 @@
                                                 width="500px" height="330px" frameborder="0"></iframe>
                                             <button class="button is-small is-info refresh"
                                                 id="reload-stand-alone-claims">refresh</button>
+                                                <p class="help">Please click refresh if there is no output</p>
                                         </div>
 
                                         <!-- <iframe src="https://onedrive.live.com/embed?cid=BBC45CB5BFB6794E&amp;resid=BBC45CB5BFB6794E%21205936&amp;authkey=APB0OWKHPgHOOt8&amp;em=2" width="476px" height="288px" frameborder="0"></iframe> -->
@@ -150,8 +148,6 @@
                     <h4 class="title is-5">2. Help fact-checkers investigate ambiguous terms in a claim</h4>
                     <p><b>Description:</b> this idea aims to detect ambiguous terms in a claim and help fact-checkers
                         generate contextual questions for further investigations based on these terms.</p>
-                    <p><b>Objective:</b> this idea aims to lead the discussion of how to objectively quantify claims'
-                        ambiguity for fact-checking, including finding ambiguous terms or analyzing a complex claim.</p>
                     <div class="image"><img src="image/Help fact-checkers investigate ambiguous terms in a claim.svg"
                             alt=""></div>
                 </div>
@@ -208,7 +204,6 @@
                                             <button class="button analyze" type="submit">
                                                 Analyze
                                             </button>
-                                            <p class="help">Please click refresh if there is no output</p>
                                         </div>
                                     </div>
                                 </div>
@@ -230,6 +225,7 @@
                                                 width="500px" height="330px" frameborder="0"></iframe>
                                             <button class="button is-small is-info refresh"
                                                 id="reload-ambiguous-terms">refresh</button>
+                                                <p class="help">Please click refresh if there is no output</p>
                                         </div>
 
                                         <!-- <iframe src="https://onedrive.live.com/embed?cid=BBC45CB5BFB6794E&amp;resid=BBC45CB5BFB6794E%21205936&amp;authkey=APB0OWKHPgHOOt8&amp;em=2" width="476px" height="288px" frameborder="0"></iframe> -->
@@ -246,8 +242,7 @@
             <div class="idea">
                 <div class="idea-top">
                     <h4 class="title is-5">3. Retrieve quantitative related information from analytical queries</h4>
-                    <p><b>Description:</b> this idea aims to help fact-checkers search quantitative related information including place, time, and statistics. It also generates a final answer by combining these quantitative information.</p>
-                    <p><b>Objective:</b> this idea aims to lead the discussion of how machine can help to assist fact-checkers in checking quantitative-related claims.</p>
+                    <p><b>Description:</b> this idea aims to help fact-checkers search quantitative related information including place, time, and statistics. It generates final answers from these quantitative information.</p>
                     <div class="image"><img src="image/Retrieve quantitative related information.svg" alt=""></div>
                 </div>
                 <h3 class="title is-6">Prototype</h3>
@@ -300,7 +295,6 @@
                                             <button class="button analyze" type="submit">
                                                 Analyze
                                             </button>
-                                            <p class="help">Please click refresh if there is no output</p>
                                         </div>
                                     </div>
                                 </div>
@@ -322,6 +316,7 @@
                                                 width="500px" height="330px" frameborder="0"></iframe>
                                             <button class="button is-small is-info refresh"
                                                 id="reload-quantitative-information">refresh</button>
+                                                <p class="help">Please click refresh if there is no output</p>
                                         </div>
 
                                         <!-- <iframe src="https://onedrive.live.com/embed?cid=BBC45CB5BFB6794E&amp;resid=BBC45CB5BFB6794E%21205936&amp;authkey=APB0OWKHPgHOOt8&amp;em=2" width="476px" height="288px" frameborder="0"></iframe> -->
@@ -339,7 +334,6 @@
                 <div class="idea-top">
                     <h4 class="title is-5">4. Review argumentation in the fact-checking report</h4>
                     <p><b>Description:</b> this idea aims to assist fact-checkers to evaluate the argumentation in a fact-checking report from three perspectives, including readability, coherency, and persuasiveness.</p>
-                    <p><b>Objective:</b> this idea aims to lead the discussion of how machine can assist fact-checkers to review their reports, not only about the argumentations, but also other criteria that fact-checkers can objectively quantify from their writing experience.</p>
                     <div class="image"><img src="image/Review argumentations in a fact-checking report.svg" alt=""></div>
                 </div>
                 <h3 class="title is-6">Prototype</h3>
@@ -387,7 +381,6 @@
                                             <button class="button analyze" type="submit">
                                                 Analyze
                                             </button>
-                                            <p class="help">Please click refresh if there is no output</p>
                                         </div>
                                     </div>
                                 </div>
@@ -409,6 +402,7 @@
                                                 width="520px" height="330px" frameborder="0"></iframe>
                                             <button class="button is-small is-info refresh"
                                                 id="reload-review-argumentation">refresh</button>
+                                                <p class="help">Please click refresh if there is no output</p>
                                         </div>
 
                                         <!-- <iframe src="https://onedrive.live.com/embed?cid=BBC45CB5BFB6794E&amp;resid=BBC45CB5BFB6794E%21205936&amp;authkey=APB0OWKHPgHOOt8&amp;em=2" width="476px" height="288px" frameborder="0"></iframe> -->
