--- a/wiz_demo/widget.html
+++ b/wiz_demo/widget.html
@@ -175,16 +175,18 @@
                                 <div class="field-body">
                                     <div class="field-content task" id="existTask">
                                         <p> You start analyzing 
-                                            <b id='inputContentType'>paragraphs</b>
-                                            <b id='inputContent'>from speech transcripts</b>
-                                            to 
-                                            <b id="designPrompts"> detect checkable claims </b>
-                                            by using following NLP to:
+                                            <b id='inputContentType'>keywords:</b>
+                                        </p>
+                                        <p>
+                                            <i id='inputContent'>please specify your keywords</i>
+                                        </p>
+                                        <p>
+                                            to <b id="designPrompts"> detect checkable claims </b> by using following NLP:
+                                        </p>
+                                        <p class="nlpPlaceholder">
+                                            <i> Your nlp tasks will display here </i>
                                         </p>
                                         <ol>
-                                            <li>Identify/extract claims</li>
-                                            <li>Detect whether it is checkable</li>
-                                            <li>Classify the claim by topics</li>
                                         </ol>
                                     </div>
                                 </div>
